                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 05-05-2005 changed: dvd audiostream selection reworked. more stable than last solution.
  - 04-05-2005 changed: SectionLoader can now load/unload dll's on demand - for preloading dlls that will be needed repeatedly.
  - 04-05-2005 added: APEv2 tag reading in APE/MP3 files, including ReplayGain info.  Requires MACDll.dll to be present.
  - 04-05-2005 fixed: APE wasn't part of the default music extensions.
  - 03-05-2005 added: basic authentication support to http reader. means authed rss feeds, authed internet playlists (thou the streams themself might not be authed). 
  - 03-05-2005 changed: Get/SeekPercentage now take floats.
  - 03-05-2005 added: Initial seek bar support - not currently implemented at the skin level.
  - 03-05-2005 changed: Increased PAPlayer output buffer size + added debug output if it drops down.
  - 03-05-2005 changed: moved cdda playback into paplayer
  - 02-05-2005 changed: music info scanner now only processes files matching the music extensions
  - 02-05-2005 updated: German language file
  - 02-05-2005 updated: Finnish language file (Thnx to jutski)
  - 02-05-2005 updated: Chinese (Traditional) language file (Thnx to dog099)
  - 02-05-2005 updated: Norwegian language file (Thnx to vnm)
  - 02-05-2005 updated: Korean language file (Thnx to akoako)
  - 01-05-2005 fixed: some more highlighting issues for dvdplayer
  - 01-05-2005 added: codec factory for paplayer
  - 01-05-2005 added: enabled pcm passthrough in paplayer
  - 01-05-2005 fixed: ac97 sound device has not counted total bytes added
  - 01-05-2005 fixed: pcm passthrough was not working using mplayer